--- a/package.json
+++ b/package.json
@@ -39,5 +39,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Taemin1234/bullcow_ts.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Taemin1234/bullcow_ts/issues"
+  },
+  "homepage": "https://github.com/Taemin1234/bullcow_ts#readme"
 }
